# ageniam

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MIGRATION_COMPLETE.md  Makefile  PRD.md  README.md  docker-compose.yaml
config/: default.toml  development.toml  production.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  ROADMAP.md
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: auth.rs  authz.rs  health.rs  identities.rs  mod.rs  policies.rs  routes.rs
src/audit/: logger.rs  mod.rs  query.rs  storage.rs  tamper_proof.rs
src/auth/: biscuit.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/authz/: cache.rs  engine.rs  evaluator.rs  middleware.rs  mod.rs  validation.rs
src/crypto/: keys.rs  kms.rs  mod.rs  signing.rs
src/db/: identities.rs  mod.rs  pool.rs  schema.rs  sessions.rs
src/db/migrations/: 001_init.sql  002_tenants.sql  003_identities.sql  004_roles_permissions.sql  005_policies.sql  006_sessions.sql  007_audit_logs.sql  008_rate_limits.sql
src/domain/: audit.rs  identity.rs  mod.rs  policy.rs  role.rs  session.rs
src/observability/: health.rs  metrics.rs  mod.rs  tracing.rs
src/rate_limit/: limiter.rs  middleware.rs  mod.rs  sliding_window.rs
src/redis/: client.rs  counters.rs  mod.rs  revocation.rs
