[package]
name = "agent-iam"
version = "0.1.0"
edition = "2021"
authors = ["Agent IAM Team"]
description = "Identity and Access Management for AI Agents"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Authentication & Authorization
jsonwebtoken = "9.2"
argon2 = "0.5"
biscuit-auth = "4.1"
cedar-policy = "3.1"

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

# Time & UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-prometheus = "0.14"
prometheus = "0.13"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
testcontainers = "0.15"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "agent-iam"
path = "src/main.rs"
